2008-09-24  Johan Dahlin  <johan@gnome.org>

	Bug 553385 – gtk-builder-convert creates untranslated combobox models

	* gtk/gtk-builder-convert: Set the translatable property on
	col tags for converted combos.

2008-09-24  Tor Lillqvist  <tml@novell.com>

	* gtk-zip.sh.in: Include all of share/man, lib/pkgconfig,
	share/aclocal and share/gtk-doc instead of trying to list
	individual files or subdirectories. We had missed gail.pc, for
	instance.

2008-09-24  Christian Dywan  <christian@imendio.com>

	Bug 538782 – Make GtkMenu's arrow size themable

	* gtk/gtkmenu.c (gtk_menu_class_init), (gtk_menu_paint):
        Implement "arrow-scaling" style property in GtkMenu.

2008-09-24  Christian Dywan  <christian@imendio.com>

	Bug 408244 – add GtkDialog::content-area-spacing

	* gtk/gtkbox.c (gtk_box_init), (gtk_box_set_spacing),
	(_gtk_box_set_spacing_set), (_gtk_box_get_spacing_set):
	* gtk/gtkbox.h:
	* gtk/gtkdialog.c (gtk_dialog_class_init), (update_spacings):
        Implement "content-area-spacing" style property in GtkDialog
        and internal helper _gtk_box_get_spacing_set in GtkBox.
        Patch by Tim Janik, Sven Herzberg and myself.

2008-09-24  Christian Dywan  <christian@imendio.com>

	Bug 541391 – Unfocussable Treeview swallows focus

	* gtk/gtktreeview.c (grab_focus_and_unset_draw_keyfocus),
	(gtk_tree_view_focus): Honor GTK_WIDGET_CAN_FOCUS properly

2008-09-24  Denis Washington  <denisw@svn.gnome.org>

	* gtk/gtkiconview.c: draw focus as a rectangle around the
	complete item, not just the text. (Bug #38254)

2008-09-23  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkobject.c
	* gtk/gtksignal.[ch]: s/GtkType/GType/ and
	s/GtkSignalMarshaller/GSignalCMarshaller/.

2008-09-23  Michael Natterer  <mitch@imendio.com>

	* gdk/x11/gdkevents-x11.c (gdk_event_translate): remove unused
	variable and fix indentation.

2008-09-23  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkclist.h
	* gtk/gtkctree.h
	* gtk/gtklist.h
	* gtk/gtklistitem.h
	* gtk/gtkobject.h